hphp/hack/test/typecheck/yield_from3.php.like_types.exp
File "yield_from3.php", line 8, characters 3-26:
Invalid yield from (Typing[4110])
File "yield_from3.php", line 8, characters 3-26:
Expected KeyedTraversable<[unresolved], [unresolved]> (result of function with 'yield' in the body)
File "yield_from3.php", line 13, characters 25-49:
But got dynamic because it is an unenforceable type
